hack directive:list-summary-detail to fix .ng-repeat-grid  flex-box: wrap; bug in Safari

--- a/src/app/scss/ionic.app.scss
+++ b/src/app/scss/ionic.app.scss
@@ -200,8 +200,10 @@ body.platform-browser  {
 .ng-repeat-grid {
   &.row {
     flex-wrap: wrap;
+    .col.col-full, .col.col-100 {
+      flex: none; /* hack for safari flex-wrap bug */
+    }
     .col {
-      flex: none;
       margin-bottom: inherit;
     }
   }
